...
          mainAxisSize: MainAxisSize.min,
          children: [
            Text(
              S.current.registerParkingEntryDialogContent(parking.title),
            ),
            TextFormField(
              key: const Key("registerParkingEntryDialogTextField"),
              keyboardType: TextInputType.text,
              controller: vehiclePlateController,
              inputFormatters: [
                FilteringTextInputFormatter.allow(RegExp(r'[a-zA-Z0-9]')),
                LengthLimitingTextInputFormatter(7),
              ],
...
      actions: [
        TextButton(
          onPressed: () => Navigator.of(context).pop(),
          child: Text(S.current.cancelButtonText),
        ),
        ElevatedButton(
          key: const Key('registerParkingEntryDialogButton'),
          onPressed: () {
            if (!formKey.currentState!.validate()) return;
            store.entryParking(
              vehiclePlate: vehiclePlateController.text.toUpperCase(),
              parking: parking,
            );
...
