...
          );
        }));
  }

  Widget emptyListWidget(BuildContext context) {
    return Center(
      key: const Key("parkingEmptyListWidget"),
      child: Column(
        mainAxisSize: MainAxisSize.max,
        mainAxisAlignment: MainAxisAlignment.center,
        spacing: 8,
        children: [
          Text(
            S.current.emptyParkingListMessage,
            style: Theme.of(context).textTheme.bodyMedium!.copyWith(
                  fontSize: 18,
                ),
          ),
          TextButton(
            key: const Key("emptyListCreateParkingButton"),
            onPressed: handleCreateParking,
            child: Text(S.current.emptyParkingListButtonText),
          ),
        ],
      ),
    );
...
